--- a/failid/htmlnaide.html
+++ b/failid/htmlnaide.html
@@ -11,5 +11,8 @@
     <p>Siin all on nupp, millele vajutades saab veel midagi teada.</p>
     <p id="pealkiri" style="display:none">See on minu esimene veebileht!</p>
     <button type="button" onclick="document.getElementById('pealkiri').style.display='block'">Vajuta siia!</button>
+	<br>
+	<p id="kaart" style="display:none"><iframe src="https://mpilvik.github.io/veebikaart/index.html" width = "50%" height = "400"></iframe></p>
+	<button type="button" onclick="document.getElementById('kaart').style.display='block'">Näita kaarti!</button>
   </body>
 </html>
